--- a/index.html
+++ b/index.html
@@ -199,7 +199,9 @@
             securityJsCode: "3fceea5bdab5553f212d996d660caf80" // 替换为你的安全代码
         };
     </script>
-    <script src="https://webapi.amap.com/maps?v=2.0&key=a69c74e4d3331c33f01c6b636307681c&plugin=AMap.Driving,AMap.Transfer,AMap.Walking,AMap.PlaceSearch,AMap.Geolocation,AMap.Geocoder,AMap.ToolBar,AMap.Scale,AMap.MapType"></script>
+<!--     <script src="https://webapi.amap.com/maps?v=2.0&key=a69c74e4d3331c33f01c6b636307681c&plugin=AMap.Driving,AMap.Transfer,AMap.Walking,AMap.PlaceSearch,AMap.Geolocation,AMap.Geocoder,AMap.ToolBar,AMap.Scale,AMap.MapType"></script> -->
+         <script src="https://webapi.amap.com/maps?v=2.0&key=9ffb6ffae4b4b4dd30256c40cc7dba40&plugin=AMap.Driving,AMap.Transfer,AMap.Walking,AMap.PlaceSearch,AMap.Geolocation,AMap.Geocoder,AMap.ToolBar,AMap.Scale,AMap.MapType"></script>
+
 </head>
 <body>
     <div class="header">
